# redis-iris-demos

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.claude/skills/: domain-pack-authoring.md
backend/app/: contracts.py  guardrail_service.py  internal_tools.py  langcache_service.py  langgraph_agent.py  main.py  memory_service.py  redis_connection.py  request_context.py  semantic_cache.py  settings.py
domains/airline-support/: __init__.py  data_generator.py  domain.py  generated_models.py  prompt.py  schema.py
domains/banking_core/: __init__.py  config.py  data_generator.py  domain_base.py  prompt.py  schema.py
domains/electrohub/: domain.py  prompt.py
domains/finance-researcher/: domain.py  prompt.py
domains/healthcare/: data_generator.py  domain.py  generated_models.py  prompt.py  schema.py
domains/northbridge-banking/: __init__.py  data_generator.py  domain.py  generated_models.py  prompt.py  schema.py
domains/radish-bank/: data_generator.py  domain.py  generated_models.py  prompt.py  schema.py
domains/reddash/: domain.py  prompt.py
notebooks/: README.md  radish_bank_workshop.ipynb  workshop_helpers.py
scripts/: seed_langcache.py
tests/: test_airline_support_domain.py  test_airline_support_semantic_cache.py  test_cs_event_stream.py  test_langcache_scopes.py  test_langcache_service.py  test_northbridge_banking_demo_flows.py  test_northbridge_banking_domain.py  test_northbridge_banking_semantic_cache.py  test_rmobile_domain.py  test_signalwave_domain.py  test_sports_betting_domain.py  test_tool_schema_sanitization.py
(+29 files in other folders)
